--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -12,6 +12,30 @@
 <body>
     <div id="app">
 
+        <div class="wapp-bg">
+            <div class="wapp-bar-green">
+                <div class="container wapp-window">
+                    <div class="row">
+                        <div class="col">
+                            1 of 2
+                        </div>
+                        <div class="col flex-column">
+                            <div class="flex-between">
+                                <div>
+                                    User
+                                </div>
+                                <div>
+                                    Utilities
+                                </div>
+                            </div>
+                            <div class="chat">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     
     </div>
     <script src="main.js"></script>
