--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>Boolzapp</title>
 </head>
 <body>
@@ -16,20 +17,41 @@
             <div class="wapp-bar-green">
                 <div class="container wapp-window">
                     <div class="row">
+
+                        <!-- COLONNA DI SINISTRA -->
                         <div class="col">
                             1 of 2
                         </div>
-                        <div class="col flex-column">
-                            <div class="flex-between">
-                                <div>
-                                    User
+
+                        <!-- COLONNA DI DESTRA -->
+                        <div class="col flex-column bg-grey">
+                            <div class="flex-between navbar">
+                                <div class="flex">
+                                    <div class="img-chat">
+                                        <img class="profile-img" src="img/avatar_1.jpg" alt="">
+                                    </div>
+                                    <div>
+                                        <div>
+                                            Michele
+                                        </div>
+                                        <div class="font-small">
+                                            Ultimo accesso oggi alle 12.00
+                                        </div>
+                                    </div>
                                 </div>
-                                <div>
-                                    Utilities
+                                <div class="flex">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                    <i class="fa-solid fa-paperclip"></i>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </div>
                             </div>
                             <div class="chat">
-
+                                PLACEHOLDER
+                            </div>
+                            <div class="message flex-between">
+                                <div><i class="fa-solid fa-face-smile"></i></div>
+                                <input type="text" class="message-bar" placeholder="Scrivi un messaggio">
+                                <div><i class="fa-solid fa-microphone"></i></div>
                             </div>
                         </div>
                     </div>
