--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -15,8 +15,8 @@
 
         <div class="wapp-bg">
             <div class="wapp-bar-green">
-                <div class="container wapp-window">
-                    <div class="row">
+                <div class="container wapp-window heighthund">
+                    <div class="row heighthund">
 
                         <!-- COLONNA DI SINISTRA -->
                         <div class="col">
