fixes height of elements

--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -19,8 +19,26 @@
                     <div class="row heighthund">
 
                         <!-- COLONNA DI SINISTRA -->
-                        <div class="col">
-                            1 of 2
+                        <div class="col flex-column">
+                            <div class="flex-between navbar bg-grey">
+                                <div class="flex">
+                                    <div>
+                                        <img class="profile-img" src="img/avatar_io.jpg" alt="">
+                                    </div>
+                                    <div>
+                                        Sofia
+                                    </div>
+                                </div>
+                                <div class="flex">
+                                    <i class="fa-solid fa-circle-notch"></i>
+                                    <i class="fa-solid fa-message"></i>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </div>
+                            </div>
+
+                            <div class="navbar bg-lightblue">
+
+                            </div>
                         </div>
 
                         <!-- COLONNA DI DESTRA -->
