--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -19,7 +19,7 @@
                     <div class="row heighthund">
 
                         <!-- COLONNA DI SINISTRA -->
-                        <div class="col flex-column padding-0">
+                        <div class="col-4 flex-column padding-0">
                             <div class="flex-between navbar bg-grey padding-bar">
                                 <div class="flex">
                                     <div>
@@ -60,7 +60,7 @@
                         </div>
 
                         <!-- COLONNA DI DESTRA -->
-                        <div class="col flex-column bg-grey padding-0">
+                        <div class="col-8 flex-column bg-grey padding-0">
                             <div class="flex-between navbar padding-bar">
                                 <div class="flex">
                                     <div class="img-chat">
@@ -81,8 +81,23 @@
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </div>
                             </div>
-                            <div class="chat">
-                                
+                            <div class="chat font-mid">
+                                <div class="row">
+                                    <div class="col-6"></div>
+                                    <div class="col-6 msg-sent">
+                                        Hai portato a spasso il cane?
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6"></div>
+                                    <div class="col-6 msg-sent">
+                                        Ricordati di stendere i panni!
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6 msg-rec">Tutto fatto!</div>
+                                    <div class="col-6"></div>
+                                </div>
                             </div>
                             <div class="flex-between padding-bar">
                                 <div><i class="fa-solid fa-face-smile"></i></div>
