--- a/Milestone 2/index.html
+++ b/Milestone 2/index.html
@@ -53,7 +53,7 @@
                             <input class="research-bar" type="text" placeholder="Cerca o inizia una nuova chat">
 
                             <img class="contact list" v-for="item in users" :src="users.img">
-                            <div class="contact-list" v-for="item in users">
+                            <div class="contact-list" v-for="item in contacts">
                                 {{item.name}}
                             </div>
 
