cannot show img in milestone 1

--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -54,6 +54,7 @@
 
                             <img class="contact list" v-for="item in users" :src="users.img">
                             <div class="contact-list" v-for="item in users">
+                                <img :src="'..img/avatar_1.jpg' alt="">
                                 {{item.name}}
                             </div>
 
