--- a/Milestone 2/index.html
+++ b/Milestone 2/index.html
@@ -52,8 +52,7 @@
                             
                             <input class="research-bar" type="text" placeholder="Cerca o inizia una nuova chat">
 
-                            <img class="contact list" v-for="item in users" :src="users.img">
-                            <div class="contact-list" v-for="item in contacts">
+                            <div class="contact-list" v-for="item in contacts" @click="changechat">
                                 {{item.name}}
                             </div>
 
