--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -52,9 +52,8 @@
                             
                             <input class="research-bar" type="text" placeholder="Cerca o inizia una nuova chat">
 
-                            <img class="contact list" v-for="item in users" :src="users.img">
                             <div class="contact-list" v-for="item in users">
-                                <img :src="'..img/avatar_1.jpg' alt="">
+                                <img :src="`..img/avatar$(users.img).jpg`" alt="">
                                 {{item.name}}
                             </div>
 
