--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -53,7 +53,7 @@
                             <input class="research-bar" type="text" placeholder="Cerca o inizia una nuova chat">
 
                             <div class="contact-list" v-for="item in users">
-                                <img :src="users.img" alt="">
+                                <img :src="item.img" alt="" class="profile-img">
                                 {{item.name}}
                             </div>
 
