item message in col 2

--- a/Milestone 2/index.html
+++ b/Milestone 2/index.html
@@ -84,7 +84,8 @@
                             <div class="chat font-mid">
                                 <div class="row">
                                     <div class="col-6"></div>
-                                    <div class="col-6 msg-sent">
+                                    <div class="col-6 msg-sent" v-for="item in users">
+                                        {{item.message}}
                                         Hai portato a spasso il cane?
                                     </div>
                                 </div>
