--- a/Milestone 2/index.html
+++ b/Milestone 2/index.html
@@ -85,7 +85,7 @@
                                 <div class="row">
                                     <div class="col-6"></div>
                                     <div class="col-6 msg-sent" v-for="item in users">
-                                        {{item.message}}
+                                        {{item.messages}}
                                         Hai portato a spasso il cane?
                                     </div>
                                 </div>
